--- a/public/css/back.css
+++ b/public/css/back.css
@@ -2,6 +2,28 @@ a {
   color: inherit;
 }
 
+label:not(.ms_visible-label) {
+  width: 0;
+  height: 0;
+  color: transparent;
+  display: block;
+}
+
+input:not([type=checkbox]) {
+  padding-block: 0.5rem;
+  padding-left: 0.5rem;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid grey;
+}
+
+input:not([type=checkbox]):focus-visible {
+  outline: none;
+  box-shadow: 0 0 4px #feaa02;
+  border-bottom: 1px solid #feaa02;
+  border-radius: 0.5rem;
+}
+
 .ms_asterisk {
   color: #feaa02;
 }
@@ -112,24 +134,20 @@ aside {
   margin: 100px auto;
 }
 
-.ms_register-card {
+.ms_form-card {
   width: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  translate: -50% -20%;
   border: 1px solid lightgray;
   border-radius: 0.3rem;
 }
 
-.ms_register-card-header {
+.ms_form-card-header {
   padding-block: 1rem;
   text-align: center;
   color: #feaa02;
   border-bottom: 1px solid lightgray;
 }
 
-.ms_register-card-body {
+.ms_form-card-body {
   padding: 2rem;
 }
 
