--- a/resources/sass/back-sass/components/_form-card.scss
+++ b/resources/sass/back-sass/components/_form-card.scss
@@ -1,15 +1,11 @@
-.ms_register-card {
+.ms_form-card {
     width: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -20%;
     border: 1px solid lightgray;
     border-radius: 0.3rem;
 }
 
 // card header
-.ms_register-card-header {
+.ms_form-card-header {
     padding-block: 1rem;
     text-align: center;
     color: $primary-color;
@@ -17,6 +13,6 @@
 }
 
 // card body
-.ms_register-card-body {
+.ms_form-card-body {
     padding: 2rem;
 }
