--- a/resources/sass/back-sass/common/_variables.scss
+++ b/resources/sass/back-sass/common/_variables.scss
@@ -6,5 +6,5 @@ $line-height-base: 1.6;
 // COLOR PALETTE
 $text-color: #181f1c;
 $primary-color: #feaa02;
-$secondary-color: #330f0a;
+$secondary-color: #5D1100;
 $tertiary-color: #394f49;
