--- a/resources/sass/back-sass/components/_form-card.scss
+++ b/resources/sass/back-sass/components/_form-card.scss
@@ -13,11 +13,15 @@
 .ms_form-card {
     width: 50%;
     background-color: white;
-    border: 1px solid lightgray;
+    border: 1px solid $secondary-color;
     border-radius: 0.3rem;
 
     &.ms_login-card {
-        width: 30%;
+        width: 40%;
+    }
+
+    input:not([type="checkbox"]) {
+        margin-bottom: 0.5rem;
     }
 }
 
@@ -26,12 +30,12 @@
     padding-block: 1rem;
     text-align: center;
     color: $primary-color;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid $secondary-color;
     font-size: 2rem;
     font-weight: 600;
 }
 
 // card body
 .ms_form-card-body {
-    padding: 4rem;
+    padding: 2rem 4rem;
 }
