product-cards fixed

--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -159,7 +159,7 @@ section {
     padding: 2rem;
     border: 1px solid $secondary-color;
     border-radius: 1rem;
-    box-shadow: 0 0 4px $secondary-color;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 // start banner elimination confirm
