--- a/resources/sass/back-sass/common/_variables.scss
+++ b/resources/sass/back-sass/common/_variables.scss
@@ -6,5 +6,7 @@ $line-height-base: 1.6;
 // COLOR PALETTE
 $text-color: #181f1c;
 $primary-color: #feaa02;
-$secondary-color: #5D1100;
-$tertiary-color: #394f49;
+$secondary-color: #740602;
+// $secondary-color: #5D1100;
+// $tertiary-color: #394f49;
+$tertiary-color: #264f36;
