--- a/resources/sass/back-sass/components/_form-card.scss
+++ b/resources/sass/back-sass/components/_form-card.scss
@@ -12,13 +12,18 @@
 }
 .ms_form-card {
     width: 50%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.95);
     border: 1px solid $secondary-color;
     border-radius: 1rem;
     box-shadow: 0 0 10px black;
 
     &.ms_login-card {
         width: 40%;
+    }
+
+    input,
+    textarea {
+        background-color: transparent;
     }
 }
 
