--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -96,6 +96,7 @@ header {
         border-radius: 50%;
         color: $primary-color;
         background-color: $tertiary-color;
+        object-fit: cover;
 
         > img {
             border-radius: 50%;
