user profile pic completed

--- a/public/css/back.css
+++ b/public/css/back.css
@@ -96,8 +96,10 @@ header .ms_profile-pic {
   border-radius: 50%;
   color: #feaa02;
   background-color: #264f36;
+  overflow: hidden;
 }
 header .ms_profile-pic > img {
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
