--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -96,9 +96,10 @@ header {
         border-radius: 50%;
         color: $primary-color;
         background-color: $tertiary-color;
+        overflow: hidden;
 
         > img {
-            // border-radius: 50%;
+            height: 100%;
             object-fit: cover;
         }
     }
