--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Variables
+@import '../js/style/variables';
+
+// Common
+@import '../js/style/common';
