--- a/resources/sass/back-sass/components/_form-card.scss
+++ b/resources/sass/back-sass/components/_form-card.scss
@@ -8,6 +8,7 @@
 
     &-login {
         height: 100vh;
+        background: center / cover url('../images/wp1874155-restaurant-wallpapers.jpg');
     }
 }
 .ms_form-card {
