--- a/resources/sass/back-sass/common/_variables.scss
+++ b/resources/sass/back-sass/common/_variables.scss
@@ -7,6 +7,6 @@ $line-height-base: 1.6;
 $text-color: #181f1c;
 $primary-color: #feaa02;
 $secondary-color: #740602;
-// $secondary-color: #5D1100;
-// $tertiary-color: #394f49;
 $tertiary-color: #264f36;
+$danger-color: #f44;
+$success-color: #00c851;
