--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -103,10 +103,12 @@ main *:is(h1, h2, h3, h4, h5, h6) {
     color: $primary-color;
 }
 .ms_txt-danger {
+    font-weight: 400;
     color: $danger-color;
 }
 .ms_txt-success {
     color: $success-color;
+    font-weight: 400;
 }
 
 // header
@@ -180,7 +182,6 @@ section {
     &[disabled] {
         background-color: #000;
         color: #acabab;
-        outline: 2px solid $danger-color;
 
         &:hover {
             color: #acabab;
