--- a/resources/sass/back-sass/components/_form-card.scss
+++ b/resources/sass/back-sass/components/_form-card.scss
@@ -1,25 +1,26 @@
 .ms_form-card-wrapper {
     padding-block: 4rem;
     width: 100vw;
+    height: 100vh;
     background: center / cover url('../images/background-registerform.jpg');
     justify-content: center;
-    align-items: center;
     box-shadow: 0 0 0 2000px rgba(0, 0, 0, 0.5) inset;
+    overflow-y: auto;
 
     &-login {
-        height: 100vh;
         background: center / cover url('../images/wp1874155-restaurant-wallpapers.jpg');
     }
 }
 .ms_form-card {
     width: 50%;
+    height: fit-content;
     background-color: rgba(255, 255, 255, 0.95);
     border: 1px solid $secondary-color;
     border-radius: 1rem;
     box-shadow: 0 0 10px black;
 
     &.ms_login-card {
-        width: 40%;
+        width: 50%;
     }
 
     input,
