--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -96,8 +96,14 @@ textarea {
 }
 
 // COMMONS
-main *:is(h1, h2, h3, h4, h5, h6) {
-    margin-bottom: 0.8em;
+main {
+
+    h1 {
+        margin-bottom: 0.8em;
+    }
+    :is(h2, h3, h4, h5, h6) {
+        margin-bottom: 0.5em;
+    }
 }
 .ms_asterisk {
     color: $primary-color;
