--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -112,6 +112,10 @@ main {
     font-weight: 400;
     color: $danger-color;
 }
+.ms_txt-warning {
+    font-weight: 400;
+    color: $warning-color;
+}
 .ms_txt-success {
     color: $success-color;
     font-weight: 400;
