--- a/resources/sass/back-sass/common/_variables.scss
+++ b/resources/sass/back-sass/common/_variables.scss
@@ -9,4 +9,5 @@ $primary-color: #feaa02;
 $secondary-color: #740602;
 $tertiary-color: #264f36;
 $danger-color: #f44;
+$warning-color: #fb3;
 $success-color: #00c851;
