--- a/resources/sass/back-sass/pages/_product-details.scss
+++ b/resources/sass/back-sass/pages/_product-details.scss
@@ -14,7 +14,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #aeaeae;
+            background-color: #d4d4d4;
     
             > img:not(.ms_placeholder-img) {
                 height: 100%;
