--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -16,6 +16,7 @@ img {
 ul {
     list-style-type: none;
 }
+
 a {
     color: inherit;
     text-decoration: none;
@@ -62,4 +63,59 @@ a {
             color: $primary-color;
         }
     }
+}
+
+// BOOTSTRAP RESET
+
+ul{
+    padding-left: 0;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 0rem;
+}
+
+.svg-inline--fa{
+    height: 2em;
+}
+
+.row{
+    --bs-gutter-x: 0;
+}
+
+// jack commons 
+
+.js_container {
+    width: 65%;
+    margin: 0 auto;
+    min-width: 800px;
+    position: relative;
+}
+
+.main_title{
+    margin: 100px auto 0 auto;
+    text-align: center;
+    width: 40%;
+}
+
+// .main_title p{
+//     color: $subtext-color;
+// }
+
+.js_button{
+    display: inline-block;
+    text-align: center;
+    // background-color: red;
+    padding: 0.7rem 2rem;
+    text-transform: uppercase;
+    color: white;
+    border-radius: 20px;
+    font-weight: 900;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+ }
+
+.js_card{
+    padding: 0.5rem 2rem;
 }
