--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9273,14 +9273,12 @@ a:hover {
 }
 
 .ms_btn {
-  margin-bottom: 0.5rem;
-  padding: 0.5em 1.5em;
+  padding: 0.2em 1em;
   display: inline-block;
   border: none;
   border-radius: 10rem;
   background-color: #740602;
   color: #feaa02;
-  font-weight: 600;
 }
 .ms_btn:hover {
   text-decoration: none;
@@ -9301,4 +9299,73 @@ a:hover {
 .ms_btn-tertiary:hover {
   text-decoration: none;
   color: #feaa02;
+}
+
+ul {
+  padding-left: 0;
+}
+
+dl, ol, ul {
+  margin-top: 0;
+  margin-bottom: 0rem;
+}
+
+.row {
+  --bs-gutter-x: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.js_container {
+  width: 65%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.main_title {
+  margin: 100px auto 0 auto;
+  text-align: center;
+  width: 40%;
+}
+
+.js_button {
+  display: inline-block;
+  text-align: center;
+  padding: 0.7rem 2rem;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 20px;
+  font-weight: 900;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+
+.js_card {
+  padding: 0.5rem 2rem;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+h4 {
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+
+h5 {
+  font-weight: 900;
+  font-size: 1.4rem;
+}
+
+p {
+  font-size: 1rem;
+  text-align: center;
+  font-weight: 400;
 }
