--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -16,6 +16,7 @@ img {
 ul {
     list-style-type: none;
 }
+
 a {
     color: inherit;
     text-decoration: none;
@@ -31,14 +32,13 @@ a {
 
 // buttons
 .ms_btn {
-    margin-bottom: 0.5rem;
-    padding: 0.5em 1.5em;
+    padding: 0.2em 1em;
     display: inline-block;
     border: none;
     border-radius: 10rem;
     background-color: $secondary-color;
     color: $primary-color;
-    font-weight: 600;
+    // font-weight: 600;
 
     &:hover {
         text-decoration: none;
@@ -62,4 +62,86 @@ a {
             color: $primary-color;
         }
     }
+}
+
+// BOOTSTRAP RESET
+
+ul{
+    padding-left: 0;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 0rem;
+}
+
+
+.row{
+    --bs-gutter-x: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+
+}
+
+
+// jack commons 
+
+.js_container {
+    width: 65%;
+    margin: 0 auto;
+    // min-width: 800px;
+    position: relative;
+}
+
+.main_title{
+    margin: 100px auto 0 auto;
+    text-align: center;
+    width: 40%;
+}
+
+// .main_title p{
+//     color: $subtext-color;
+// }
+
+.js_button{
+    display: inline-block;
+    text-align: center;
+    // background-color: red;
+    padding: 0.7rem 2rem;
+    text-transform: uppercase;
+    color: white;
+    border-radius: 20px;
+    font-weight: 900;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+ }
+
+.js_card{
+    padding: 0.5rem 2rem;
+}
+
+h2{
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+h3{
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+h4{
+    font-weight: 700;
+    font-size: 1.4rem;
+}
+
+h5{
+    font-weight: 900;
+    font-size: 1.4rem;
+}
+
+p{
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 400;
 }
