--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
@@ -121,8 +122,8 @@ dl, ol, ul {
 }
 
 h2{
-    font-weight: 700;
-    font-size: 2.8rem;
+    font-weight: 900;
+    font-size: 3rem;
 }
 
 h3{
@@ -141,7 +142,7 @@ h5{
 }
 
 p{
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: center;
-    font-weight: 400;
+    font-weight: 900;
 }
