join-us-component done

--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;   
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -124,6 +124,7 @@ dl, ol, ul {
 h2{
     font-weight: 900;
     font-size: 5rem;
+    text-shadow: #FFFCA8 2px 2px 0px, #9C9C9C 4px 4px 0px;
 }
 
 h3{
