--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9244,7 +9244,7 @@ h3 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -9270,7 +9270,7 @@ a:hover {
 }
 
 .ms_link {
-  color: #feaa02;
+  color: #ffc509;
 }
 
 .ms_btn {
@@ -9279,14 +9279,14 @@ a:hover {
   border: none;
   border-radius: 10rem;
   background-color: #740602;
-  color: #feaa02;
+  color: #ffc509;
 }
 .ms_btn:hover {
   text-decoration: none;
-  color: #feaa02;
+  color: #ffc509;
 }
 .ms_btn-secondary {
-  background-color: #feaa02;
+  background-color: #ffc509;
   color: #740602;
 }
 .ms_btn-secondary:hover {
@@ -9295,11 +9295,11 @@ a:hover {
 }
 .ms_btn-tertiary {
   background-color: #264f36;
-  color: #feaa02;
+  color: #ffc509;
 }
 .ms_btn-tertiary:hover {
   text-decoration: none;
-  color: #feaa02;
+  color: #ffc509;
 }
 
 ul {
@@ -9348,6 +9348,7 @@ dl, ol, ul {
 h2 {
   font-weight: 900;
   font-size: 5rem;
+  text-shadow: #FFFCA8 2px 2px 0px, #9C9C9C 4px 4px 0px;
 }
 
 h3 {
