--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -85,12 +85,11 @@ dl, ol, ul {
 }
 
 
-// jack commons 
+// front office style commons 
 
 .js_container {
     width: 65%;
     margin: 0 auto;
-    // min-width: 800px;
     position: relative;
 }
 
@@ -100,14 +99,9 @@ dl, ol, ul {
     width: 40%;
 }
 
-// .main_title p{
-//     color: $subtext-color;
-// }
-
 .js_button{
     display: inline-block;
     text-align: center;
-    // background-color: red;
     padding: 0.7rem 2rem;
     text-transform: uppercase;
     color: white;
@@ -121,29 +115,29 @@ dl, ol, ul {
     padding: 0.5rem 2rem;
 }
 
-
-h2.jack{
+h2.fo-style{
     font-weight: 900;
     font-size: 5rem;
-    text-shadow: #FFFCA8 2px 2px 0px, #9C9C9C 4px 4px 0px;
+    text-shadow: #FFFCA8 2px 2px 0px,
+     #9C9C9C 4px 4px 0px;
 }
 
-h3.jack{
+h3.fo-style{
     font-weight: 700;
     font-size: 2rem;
 }
 
-h4.jack{
+h4.fo-style{
     font-weight: 700;
     font-size: 1.4rem;
 }
 
-h5.jack{
+h5.fo-style{
     font-weight: 900;
     font-size: 1.4rem;
 }
 
-p.jack{
+p.fo-style{
     font-size: 1.2rem;
     text-align: center;
     font-weight: 900;
