adjust best restourante layout

--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -116,6 +116,7 @@ dl, ol, ul {
 }
 
 h2.fo-style{
+    // font-family:
     font-weight: 900;
     font-size: 5rem;
     text-shadow: #FFFCA8 2px 2px 0px,
