--- a/public/css/back.css
+++ b/public/css/back.css
@@ -148,19 +148,19 @@ header .ms_profile-pic > img {
 
 aside {
   padding-top: 2rem;
-  width: 170px;
+  width: 200px;
   height: calc(100vh - 70px);
   background-color: #740602;
   color: #feaa02;
   font-weight: 600;
 }
 aside li {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.7rem;
   padding-left: 1rem;
 }
 
 main {
-  width: calc(100% - 170px);
+  width: calc(100% - 200px);
   height: calc(100vh - 70px);
   overflow-y: auto;
 }
@@ -424,4 +424,9 @@ section .ms_form-card-body {
 }
 .ms_user-home-info > div span {
   color: #740602;
+}
+
+.ms_order-row {
+  padding-block: 0.5rem;
+  border-bottom: 2px solid #feaa02;
 }
