--- a/resources/sass/back-sass/back.scss
+++ b/resources/sass/back-sass/back.scss
@@ -11,3 +11,4 @@
 // PAGES
 @import '../back-sass/pages/product-details';
 @import '../back-sass/pages/user-home';
+@import '../back-sass/pages/orders';
